<<<<<<< ChangeLog
Fri Apr 30 19:30:42 1999  Geoff Hutchison  <ghutchis@wso.williams.edu>

	* htlib/HtRegex.h, htlib/HtRegex.cc: New class, contributed by
	Peter D. Gray <pdg@draci.its.uow.edu.au> as a small wrapper for
	system regex calls.

	* htlib/Makefile.in: Build it.
	
	* htdig/htdig.h: Use it if REGEX is defined.

	* htdig/htdig.cc: Ditto.

	* htdig/Retriever.cc: Ditto.

	* htsearch/Display.cc(generateStars): Remove extra newline after
	STARSRIGHT and STARSLEFT variables, noted by Torsten Neuer
	<tneuer@inwise.de>.
	
Fri Apr 30 18:52:56 1999  Alexander Bergolth  <leo@leo.wu-wien.ac.at>

	* htlib/URL.cc(ServerAlias): port for server_alias entries now
	defaults to 80 if omitted.

Wed Apr 28 19:57:38 1999  Geoff Hutchison  <ghutchis@wso.williams.edu>

	* htlib/HtDateTime.h, htlib/HtDateTime.cc: New class, contributed
	by Gabriele.

	* htlib/Makefile.in: Compile it.

	* README: Update message from 3.1.0 (oops!) to 3.2.0, remove rx
	directory.

	* installdir/htdig.conf: Add example of no_excerpt_show_top
	attribute in line with most user's expectations.

	* contrib/README: Mention contributed section of the website.

	* Makefile.in: Ignore mailarchive directory--now removed from CVS.

Wed Apr 28 10:46:31 1999  Gilles Detillieux  <grdetil@scrc.umanitoba.ca>

	* htmerge/db.cc(mergeDB): fix a few errors in how the merge index
	name is obtained.

Tue Apr 27 23:00:39 1999  Geoff Hutchison  <ghutchis@wso.williams.edu>

	* Makefile.config.in: Remove now-useless LIBDIRS variable.

	* mailarchive/Split.java, mailarchive/htdig: Remove ancient
	mailarchive stuff.
	
Tue Apr 27 18:01:52 1999  Gilles Detillieux  <grdetil@scrc.umanitoba.ca>

	* htsearch/Display.cc(setupImages): Remove code setting URLimage to
	a bogus pattern (remnant left over after merge).

Tue Apr 27 16:43:08 1999  Gilles Detillieux  <grdetil@scrc.umanitoba.ca>

	* htdig/Document.cc(RetrieveHTTP): Show "Unable to build connection"
	message at lower debug level.
